--- a/asset/media.css
+++ b/asset/media.css
@@ -222,6 +222,196 @@
         display: block;
         /* visibility: visible; */
     }
+
+
+    /* login.html */
+
+    .container-login{
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient(180deg, white, grey);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .row-login{
+        width: 90%;
+        height: 450px;
+        /* border: 1px solid red; */
+        background-image: url(../img/main.jpg);
+        border-radius: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .col-login{
+        width: 85%;
+        height: 380px;
+        border: 1px solid grey;
+        background-color: transparent;
+        backdrop-filter: blur(0.5rem);
+        border-radius: 3rem;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        font-family: sans-serif;
+    }
+    .col-login h1 {
+        color: white;
+        font-family: sans-serif;
+        margin-top: 2rem;
+        font-size: 30px;
+    }
+    
+    .form-login{
+        width: 300px;
+        height: 50px;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+        padding: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50rem;
+        border: 1px solid grey;
+        background-color: transparent;
+        backdrop-filter: blur(0.5rem);
+        color: white;
+        outline: none;
+        margin-left: 0.5rem;    
+    }
+    .form-login::placeholder{
+        color: white;
+    }
+    .checkbox{
+        margin-left: 1rem;
+        color: white;
+    }
+    .checkbox a{
+        text-decoration: none;
+        margin-left: 1rem;
+        color: white;
+    }
+    .login {
+        width: 300px;
+        height: 50px;
+        background-color: white;
+        color: black;
+        border: none;
+        font-size: 18px;
+        border-radius: 50px;
+        transition: 0.5s;
+        cursor: pointer;
+        margin-top: 1rem;
+        margin-left: 0.5rem;
+    }
+    .login:hover {
+        background-color: rgb(2, 2, 107);
+        color: white;
+    }
+    .Account{
+        color: white;
+        font-family: sans-serif;
+        font-size: 15px;
+        margin-top: 1rem;
+        margin-left: 1rem;
+    }
+    .Account a{
+        color: white;
+        text-decoration: none;
+        margin-left: 3rem;
+    }
+
+    /* signup.html? */
+    .container-signup{
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient(180deg, white, grey);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .row-signup{
+        width: 90%;
+        height: 550px;
+        /* border: 1px solid grey; */
+        background-image: url(../img/main.jpg);
+        border-radius: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .col-signup{
+        width: 85%;
+        height: 500px;
+        border: 1px solid grey;
+        border-radius: 3rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* justify-content: center; */
+        background-color: transparent;
+        backdrop-filter: blur(0.5rem);
+    }
+    .col-signup h4 {
+        color: white;
+        font-size: 30px;
+        font-family: sans-serif;
+        margin-top: 3rem;
+    }
+    .s-form{
+        width: 340px;
+        height: 50px; 
+        display: flex;
+        flex-direction: column; 
+        justify-content: center;
+        /* align-items: center; */
+        margin-top: 0.5rem;
+        border-radius: 2rem;
+        border: 1px solid grey;
+        background-color: transparent;
+        backdrop-filter: blur(0.5rem);
+        outline: none;
+        padding: 0 0 0 1rem;
+        color: white;
+        margin: 2%;
+    }
+    .s-form::placeholder{
+        padding: 0 0 0 1rem;
+        outline: none;
+        color: white;
+        border: none;
+    }
+    .signup {
+        width: 340px;
+        height: 50px;
+        background-color: white;
+        color: black;
+        border: none;
+        font-size: 20px;
+        border-radius: 50px;
+        transition: 0.5s;
+        cursor: pointer;
+        margin-top: 1rem;
+        /* margin-left: 1rem; */
+    }
+    .signup:hover {
+        background-color: rgb(2, 2, 107);
+        color: white;
+    }
+    .Acclogin{
+        color: white;
+        margin-top: 2rem;
+        text-align: center;
+        font-size: 14px;
+    }
+    .Acclogin a{
+        text-decoration: none;
+        color: white;
+        margin-left: 1rem;
+    }
+    
 }
 
 /* ipad */
@@ -446,4 +636,194 @@
         display: block;
         /* visibility: visible; */
     }
+
+    
+
+    /* login.html */
+    .container-login{
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient(180deg, white, grey);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .row-login{
+        width: 70%;
+        height: 500px;
+        /* border: 1px solid red; */
+        background-image: url(../img/main.jpg);
+        border-radius: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .col-login{
+        width: 85%;
+        height: 400px;
+        border: 1px solid grey;
+        background-color: transparent;
+        backdrop-filter: blur(0.5rem);
+        border-radius: 3rem;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        font-family: sans-serif;
+    }
+    .col-login h1 {
+        color: white;
+        font-family: sans-serif;
+        margin-top: 2rem;
+        font-size: 35px;
+    }
+    
+    .form-login{
+        width: 350px;
+        height: 50px;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+        padding: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50rem;
+        border: 1px solid grey;
+        background-color: transparent;
+        backdrop-filter: blur(0.5rem);
+        color: white;
+        outline: none;
+    }
+    .form-login::placeholder{
+        color: white;
+    }
+    .checkbox{
+        margin-left: 1rem;
+        color: white;
+    }
+    .checkbox a{
+        text-decoration: none;
+        margin-left: 4rem;
+        color: white;
+    }
+    .login {
+        width: 350px;
+        height: 50px;
+        background-color: white;
+        color: black;
+        border: none;
+        font-size: 18px;
+        border-radius: 50px;
+        transition: 0.5s;
+        cursor: pointer;
+        margin-top: 1rem;
+        margin-left: 0.5rem;
+    }
+    .login:hover {
+        background-color: rgb(2, 2, 107);
+        color: white;
+    }
+    .Account{
+        color: white;
+        font-family: sans-serif;
+        font-size: 15px;
+        margin-top: 1rem;
+        margin-left: 1rem;
+    }
+    .Account a{
+        color: white;
+        text-decoration: none;
+        margin-left: 6.5rem;
+        margin-top: 1rem;
+    }
+    
+
+    /* signup.html */
+    .container-signup{
+        width: 100%;
+        height: 100vh;
+        background-image: linear-gradient(180deg, white, grey);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .row-signup{
+        width: 70%;
+        height: 600px;
+        border: 1px solid grey;
+        background-image: url(../img/main.jpg);
+        border-radius: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .col-signup{
+        width: 85%;
+        height: 500px;
+        border: 1px solid grey;
+        border-radius: 3rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* justify-content: center; */
+        background-color: transparent;
+        backdrop-filter: blur(0.5rem);
+    }
+    .col-signup h4 {
+        color: white;
+        font-size: 30px;
+        font-family: sans-serif;
+        margin-top: 3rem;
+    }
+    .s-form{
+        width: 400px;
+        height: 50px; 
+        display: flex;
+        flex-direction: column; 
+        justify-content: center;
+        /* align-items: center; */
+        margin-top: 0.5rem;
+        border-radius: 2rem;
+        border: 1px solid grey;
+        background-color: transparent;
+        backdrop-filter: blur(0.5rem);
+        outline: none;
+        padding: 0 0 0 1rem;
+        color: white;
+        margin-left: 0.5rem;
+    }
+    .s-form::placeholder{
+        padding: 0 0 0 1rem;
+        outline: none;
+        color: white;
+        border: none;
+    }
+    .signup {
+        width: 400px;
+        height: 50px;
+        background-color: white;
+        color: black;
+        border: none;
+        font-size: 20px;
+        border-radius: 50px;
+        transition: 0.5s;
+        cursor: pointer;
+        margin-top: 1rem;
+        margin-left: 0.5rem;
+    }
+    .signup:hover {
+        background-color: rgb(2, 2, 107);
+        color: white;
+    }
+    .Acclogin{
+        color: white;
+        margin-top: 2rem;
+        text-align: center;
+    }
+    .Acclogin a{
+        text-decoration: none;
+        color: white;
+        margin-left: 1rem;
+    }
+
 }
