--- a/asset/style.css
+++ b/asset/style.css
@@ -306,8 +306,8 @@
     background-color: transparent;
     backdrop-filter: blur(0.5rem);
     border-radius: 3rem;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     /* justify-content: center; */
     align-items: center;
     font-family: sans-serif;
@@ -315,42 +315,45 @@
 .col-login h1 {
     color: white;
     font-family: sans-serif;
-    margin-top: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     font-size: 50px;
+    text-align: center;
 }
 
 .form-login{
-    width: 400px;
+    width: 80%;
     height: 50px;
     margin-bottom: 1rem;
-    margin-top: 1rem;
+    /* margin-top: 1rem; */
     padding: 1rem;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     border-radius: 50rem;
     border: 1px solid grey;
     background-color: transparent;
     backdrop-filter: blur(0.5rem);
     color: white;
     outline: none;
-    margin-left: 1rem;
+    margin-left: 2.5rem;
+    
 }
 .form-login::placeholder{
     color: white;
 }
 .checkbox{
-    margin-left: 1rem;
+    margin-left: 1.5rem;
     color: white;
 }
 .checkbox a{
     text-decoration: none;
-    margin-left: 8rem;
+    margin-left: 7.5rem;
     color: white;
 }
 
 .login {
-    width: 400px;
+    width: 80%;
     height: 50px;
     background-color: white;
     color: black;
@@ -360,7 +363,7 @@
     transition: 0.5s;
     cursor: pointer;
     margin-top: 1rem;
-    margin-left: 1rem;
+    margin-left: 2.5rem;
 }
 .login:hover {
     background-color: rgb(2, 2, 107);
@@ -371,12 +374,12 @@
     font-family: sans-serif;
     font-size: 15px;
     margin-top: 1rem;
-    margin-left: 1rem;
+    margin-left: 3rem;
 }
 .Account a{
     color: white;
     text-decoration: none;
-    margin-left: 8rem;
+    margin-left: 8.5rem;
 }
 
 
@@ -400,12 +403,12 @@
     align-items: center;
 }
 .col-signup{
-    width: 50%;
+    width: 60%;
     height: 500px;
     border: 1px solid grey;
     border-radius: 3rem;
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     align-items: center;
     /* justify-content: center; */
     background-color: transparent;
@@ -416,9 +419,10 @@
     font-size: 30px;
     font-family: sans-serif;
     margin-top: 3rem;
+    text-align: center;
 }
 .s-form{
-    width: 400px;
+    width: 80%;
     height: 50px; 
     display: flex;
     flex-direction: column; 
@@ -432,7 +436,7 @@
     outline: none;
     padding: 0 0 0 1rem;
     color: white;
-    margin-left: 0.5rem;
+    margin-left: 3.5rem;
 }
 .s-form::placeholder{
     padding: 0 0 0 1rem;
@@ -441,7 +445,7 @@
     border: none;
 }
 .signup {
-    width: 400px;
+    width: 80%;
     height: 50px;
     background-color: white;
     color: black;
@@ -451,7 +455,7 @@
     transition: 0.5s;
     cursor: pointer;
     margin-top: 1rem;
-    margin-left: 0.5rem;
+    margin-left: 3.5rem;
 }
 .signup:hover {
     background-color: rgb(2, 2, 107);
